--- a/www/registration/index.html
+++ b/www/registration/index.html
@@ -161,7 +161,7 @@
       }
   
       // Send the form data as JSON to the register endpoint
-      fetch("http://127.0.0.1:5000/register", {
+      fetch("http://app.ronwork.com:5000//register", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
