--- a/www/dashboard/index.html
+++ b/www/dashboard/index.html
@@ -201,7 +201,7 @@ if (!accessToken) {
 }
 
 // Fetch current user's details
-fetch('http://127.0.0.1:5000/users/' + userEmail, {
+fetch('http://app.ronwork.com:5000//users/' + userEmail, {
   headers: {
     'Authorization': 'Bearer ' + accessToken
   }
@@ -277,7 +277,7 @@ document.getElementById('logout-link').addEventListener('click', function(event)
 // User details function
 function userDetails() {
   // Fetch individual user data
-  fetch('http://127.0.0.1:5000/users/' + userEmail, {
+  fetch('http://app.ronwork.com:5000//users/' + userEmail, {
     headers: {
       'Authorization': 'Bearer ' + accessToken
     }
@@ -325,7 +325,7 @@ document.getElementById('update-btn').addEventListener('click', function(event) 
     var violations = document.getElementById('violations').value;
     var role = document.getElementById('role').value;
 
-    fetch('http://127.0.0.1:5000/users/' + userEmail, {
+    fetch('http://app.ronwork.com:5000//users/' + userEmail, {
       method: 'PUT',
       headers: {
         'Authorization': 'Bearer ' + accessToken,
@@ -368,7 +368,7 @@ document.getElementById('delete-btn').addEventListener('click', function(event) 
   var confirmDelete = confirm("Are you sure you want to delete your account? This action cannot be undone.");
 
   if (confirmDelete) {
-    fetch('http://127.0.0.1:5000/users/' + userEmail, {
+    fetch('http://app.ronwork.com:5000//users/' + userEmail, {
       method: 'DELETE',
       headers: {
         'Authorization': 'Bearer ' + accessToken
@@ -392,7 +392,7 @@ document.getElementById('delete-btn').addEventListener('click', function(event) 
 });
 
 // Retrieve current user's city and current location
-fetch('http://127.0.0.1:5000/users/' + userEmail, {
+fetch('http://app.ronwork.com:5000//users/' + userEmail, {
   headers: {
     'Authorization': 'Bearer ' + accessToken
   }
@@ -409,7 +409,7 @@ fetch('http://127.0.0.1:5000/users/' + userEmail, {
     var userCurrentLocation = user.current_location;
 
     // Fetch the drivers with the same city and current location
-    fetch('http://127.0.0.1:5000/users', {
+    fetch('http://app.ronwork.com:5000//users', {
       headers: {
         'Authorization': 'Bearer ' + accessToken
       }
@@ -461,7 +461,7 @@ fetch('http://127.0.0.1:5000/users/' + userEmail, {
   });
 
   // Retrieve current user's city and current location
-fetch('http://127.0.0.1:5000/users/' + userEmail, {
+fetch('http://app.ronwork.com:5000//users/' + userEmail, {
   headers: {
     'Authorization': 'Bearer ' + accessToken
   }
@@ -478,7 +478,7 @@ fetch('http://127.0.0.1:5000/users/' + userEmail, {
     var userCurrentLocation = user.current_location;
 
     // Fetch the drivers with the same city and current location
-    fetch('http://127.0.0.1:5000/users', {
+    fetch('http://app.ronwork.com:5000//users', {
       headers: {
         'Authorization': 'Bearer ' + accessToken
       }
@@ -532,7 +532,7 @@ fetch('http://127.0.0.1:5000/users/' + userEmail, {
 
   
 // Fetch comments
-fetch('http://127.0.0.1:5000/comments', {
+fetch('http://app.ronwork.com:5000//comments', {
   headers: {
     'Authorization': 'Bearer ' + accessToken
   }
@@ -634,7 +634,7 @@ submitButton.addEventListener('click', function() {
   };
 
   // Send the comment to the server
-  fetch('http://127.0.0.1:5000/comments', {
+  fetch('http://app.ronwork.com:5000//comments', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/json',
@@ -663,7 +663,7 @@ submitButton.addEventListener('click', function() {
 var adminContainer = document.getElementById('admin-container');
 
 // Fetch data from the API with token authorization
-fetch('http://127.0.0.1:5000/approved_list', {
+fetch('http://app.ronwork.com:5000//approved_list', {
   headers: {
     'Authorization': 'Bearer ' + accessToken
   }
@@ -703,7 +703,7 @@ fetch('http://127.0.0.1:5000/approved_list', {
 
  // Function to fetch and display the email list
  function displayEmailList() {
-      fetch("http://127.0.0.1:5000/approved_list")
+      fetch("http://app.ronwork.com:5000//approved_list")
         .then(function(response) {
           if (response.ok) {
             return response.json();
@@ -746,7 +746,7 @@ fetch('http://127.0.0.1:5000/approved_list', {
     function deleteEmail(id) {
       var confirmation = confirm("Are you sure you want to delete this email?");
       if (confirmation) {
-        fetch(`http://127.0.0.1:5000/delete_email/${id}`, {
+        fetch(`http://app.ronwork.com:5000//delete_email/${id}`, {
           method: "DELETE"
         })
           .then(function(response) {
